@@ -1,6 +1,18 @@
 class StickiesController < ApplicationController
   before_filter :authenticate_user!
 
+  def calendar
+    @selected_date = begin Date.strptime(params[:selected_date], "%m/%d/%Y") rescue Date.today end
+    @start_date = @selected_date.beginning_of_month
+    @end_date = @selected_date.end_of_month
+    @stickies = current_user.all_viewable_stickies.with_due_date_for_calendar(@start_date, @end_date)
+    
+    @first_sunday = @start_date - @start_date.wday.day
+    @last_saturday = @end_date + (6 - @end_date.wday).day
+    
+    # @stickies = current_user.all_viewable_stickies.with_date_for_calendar(@start_date, @end_date)
+  end
+
   def search
     current_user.update_attribute :stickies_per_page, params[:stickies_per_page].to_i if params[:stickies_per_page].to_i >= 10 and params[:stickies_per_page].to_i <= 200
     @project = current_user.all_viewable_projects.find_by_id(params[:project_id])
@@ -46,7 +58,11 @@ class StickiesController < ApplicationController
     params[:sticky][:due_date] = Date.strptime(params[:sticky][:due_date], "%m/%d/%Y") if params[:sticky] and not params[:sticky][:due_date].blank?
     @sticky = current_user.stickies.new(params[:sticky])
     if @sticky.save
-      redirect_to(@sticky, :notice => 'Sticky was successfully created.')
+      if params[:from_calendar] == '1'
+        redirect_to(calendar_stickies_path(selected_date: @sticky.due_date), :notice => 'Sticky was successfully created.')
+      else
+        redirect_to(@sticky, :notice => 'Sticky was successfully created.')
+      end
     else
       render :action => "new"
     end
