@@ -1,0 +1,13 @@
+<% if params[:direction].to_i > 0 %>
+  $("#month-breakdown").hide( 'slide', { direction: "left" }, 500 );
+  $("#month-breakdown").html("<%= escape_javascript(render("stickies/month_breakdown")) %>");
+  $("#month-breakdown").show( 'slide', { direction: "right" }, 500 );
+<% elsif params[:direction].to_i < 0 %>
+  $("#month-breakdown").hide( 'slide', { direction: "right" }, 500 );
+  $("#month-breakdown").html("<%= escape_javascript(render("stickies/month_breakdown")) %>");
+  $("#month-breakdown").show( 'slide', { direction: "left" }, 500 );  
+<% else %>
+  $("#month-breakdown").html("<%= escape_javascript(render("stickies/month_breakdown")) %>");
+<% end %>
+
+$("#direction").val(0);
