@@ -37,6 +37,7 @@ Notes::Application.routes.draw do
     collection do
       get :search
       get :template
+      get :calendar
     end
   end
   
